fixes project cards on mobile device

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -972,8 +972,9 @@ a.symbol:hover {
 }
 
 .cell {
+  display: block;
   margin: 1rem;
-  box-shadow: 1px 1px 3px 0px  rgba(0,0,0,0.3);
+  box-shadow: 1px 1px 3px 1px  rgba(0,0,0,0.3);
   border-radius: 10px;
   padding: 1rem;
   text-align: center;
@@ -981,7 +982,7 @@ a.symbol:hover {
 }
 
 .cell:hover {
-  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  box-shadow: 2px 2px 6px 2px  rgba(0,0,0,0.3);
   transition: 0.1s ease-out;
 }
 
